--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -15,6 +15,6 @@ jobs:
       - name: setup
         run: make setup
       - name: test        
-      - run: make test
+        run: make test
       - name: lint      
-      - run: make lint 
+        run: make lint 
